scenarios/01-simple/http-redirect/31-http-redirect-httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: redirect-gateway
      sectionName: http
  hostnames:
    - redirect.example.test
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
